--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,6 +109,23 @@ services:
             retries: 5
             start_period: 45s
             timeout: 30s
+    coder:
+        image: ghcr.io/coder/coder:latest
+        container_name: coder
+        restart: unless-stopped
+        user: root  # Add this line
+        ports:
+            - "7080:3000"
+        environment:
+            CODER_DEV: "true"
+            CODER_PG_CONNECTION_URL: "postgres://mgmnt:mgmntpass@postgres:5432/mgmnt_dev?sslmode=disable"
+        volumes:
+            - coder_data:/home/coder/.local/share/coder
+            - /var/run/docker.sock:/var/run/docker.sock
+        depends_on:
+            - postgres
+        networks:
+            - mgmnt-app
 networks:
     mgmnt-app:
 volumes:
@@ -116,3 +133,4 @@ volumes:
     node_modules:
     dbgate-data:
     minio-data:
+    coder_data:
