--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "clsx": "^2.1.1",
         "dayjs": "^1.11.18",
         "debug": "^4.4.1",
+        "eventsource-parser": "^3.0.6",
         "highlight.js": "^11.11.1",
         "jsonwebtoken": "^9.0.2",
         "kysely": "^0.28.5",
