--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
         "server-only": "^0.0.1",
         "si-encryption": "github:safeinsights/encryption#0dc20c2949199185182c16569313660657dcb636",
         "uuid": "^11.1.0",
+        "validator": "^13.15.23",
         "zod": "^4.1.5"
     },
     "devDependencies": {
