--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
         "eventsource-parser": "^3.0.6",
         "highlight.js": "^11.11.1",
         "jsonwebtoken": "^9.0.2",
+        "jws": "^4.0.1",
         "kysely": "^0.28.8",
         "kysely-ctl": "^0.19.0",
-        "jws": "^4.0.1",
         "libphonenumber-js": "^1.12.15",
         "mailgun.js": "^12.0.3",
         "mantine-datatable": "^8.2.0",
@@ -88,7 +88,8 @@
         "si-encryption": "github:safeinsights/encryption#0dc20c2949199185182c16569313660657dcb636",
         "uuid": "^11.1.0",
         "validator": "^13.15.23",
-        "zod": "^4.1.5"
+        "zod": "^4.1.5",
+        "zustand": "^5.0.9"
     },
     "devDependencies": {
         "@clerk/testing": "^1.12.3",
