move coder-files back into tests
Makes it easier to test

--- a/.env.sample
+++ b/.env.sample
@@ -22,7 +22,7 @@ AWS_ACCESS_KEY_ID=si-local-minio
 AWS_SECRET_ACCESS_KEY=si-local-minio
 AWS_REGION=us-east-1
 
-CODER_FILES=tests
+CODER_FILES=./tests/coder-files
 CODER_API_ENDPOINT=
 CODER_TOKEN=
 CODER_TEMPLATE=
