--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "scripts": {
         "build:lambda": "./bin/build-lambda",
         "ci:server": "./bin/ci-server",
-        "dev": "next dev --turbopack -p 4000",
+        "dev": "next dev -p 4000",
         "prepare": "panda codegen",
         "build": "next build",
         "db:migrate": "./bin/migrate-dev-db",
@@ -45,7 +45,7 @@
         "@aws-sdk/s3-presigned-post": "^3.879.0",
         "@aws-sdk/s3-request-presigner": "^3.879.0",
         "@casl/ability": "^6.7.3",
-        "@clerk/nextjs": "^6.31.8",
+        "@clerk/nextjs": "^6.36.5",
         "@faker-js/faker": "^10.0.0",
         "@mantine/core": "^8.3",
         "@mantine/dropzone": "^8.3",
@@ -74,13 +74,13 @@
         "mailgun.js": "^12.0.3",
         "mantine-datatable": "^8.2.0",
         "mantine-form-zod-resolver": "^1.3.0",
-        "next": "^15.5.2",
+        "next": "16.1.1",
         "next-swagger-doc": "^0.4",
         "papaparse": "^5.5.3",
         "pg": "^8.16.3",
         "qrcode.react": "^4.2.0",
-        "react": "19.1.2",
-        "react-dom": "19.1.2",
+        "react": "19.2.3",
+        "react-dom": "19.2.3",
         "react-icons": "^5.5.0",
         "react-phone-number-input": "^3.4.12",
         "remeda": "^2.30.0",
@@ -92,9 +92,9 @@
         "zustand": "^5.0.9"
     },
     "devDependencies": {
-        "@clerk/testing": "^1.12.3",
+        "@clerk/testing": "^1.13.26",
         "@eslint/js": "^9.34.0",
-        "@next/eslint-plugin-next": "^15.5.2",
+        "@next/eslint-plugin-next": "16.1.1",
         "@octokit/rest": "^22.0.0",
         "@pandacss/dev": "^1.2.0",
         "@playwright/test": "^1.56",
@@ -103,12 +103,12 @@
         "@testing-library/user-event": "^14.6.1",
         "@types/debug": "^4.1.12",
         "@types/minimist": "^1.2.5",
-        "@types/react": "19.1.12",
+        "@types/react": "19.2.7",
         "@vitejs/plugin-react": "^5.0.2",
         "aws-sdk-client-mock": "^4.1.0",
         "dotenv": "*",
         "eslint": "^9.39.1",
-        "eslint-config-next": "*",
+        "eslint-config-next": "16.1.1",
         "eslint-config-prettier": "*",
         "eslint-plugin-react": "^7.37.5",
         "globals": "^16.3.0",
@@ -127,5 +127,8 @@
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "*",
         "vitest-monocart-coverage": "^3.0.1"
+    },
+    "overrides": {
+        "@types/react": "19.2.7"
     }
 }
