--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "moduleResolution": "bundler",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "jsx": "preserve",
+        "jsx": "react-jsx",
         "incremental": true,
         "plugins": [
             {
@@ -29,7 +29,8 @@
         "**/*.tsx",
         ".next/types/**/*.ts",
         "vitest.config.mts",
-        "src/server/actions/f"
+        "src/server/actions/f",
+        ".next/dev/types/**/*.ts"
     ],
     "exclude": ["node_modules", "bin/**/*"]
 }
