deprecate using testing accounts locally
Doing so causes conflicts between devs because the user and org ids are different between each devs environment

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "prepare": "panda codegen",
         "build": "next build",
         "db:migrate": "./bin/migrate-dev-db",
+        "create-admin-user": "tsx bin/create-admin-user.ts",
         "start": "next start",
         "deploy": "tsx bin/deploy.ts",
         "lint": "eslint . && prettier --check --log-level warn .",
@@ -103,6 +104,7 @@
         "@testing-library/user-event": "^14.6.1",
         "@types/debug": "^4.1.12",
         "@types/minimist": "^1.2.5",
+        "@types/prompts": "^2.4.9",
         "@types/react": "19.2.7",
         "@vitejs/plugin-react": "^5.0.2",
         "aws-sdk-client-mock": "^4.1.0",
@@ -122,6 +124,7 @@
         "npm-run-all": "*",
         "pg-transactional-tests": "^1.2.0",
         "prettier": "*",
+        "prompts": "^2.4.2",
         "tsx": "4.20.4",
         "typescript-eslint": "^8.42.0",
         "vite-tsconfig-paths": "^5.1.4",
