--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@casl/ability": "^6.7.3",
         "@clerk/nextjs": "^6.36.5",
         "@faker-js/faker": "^10.0.0",
+        "@lexical/react": "^0.39.0",
         "@mantine/core": "^8.3",
         "@mantine/dropzone": "^8.3",
         "@mantine/form": "^8.3",
@@ -71,6 +72,7 @@
         "jws": "^4.0.1",
         "kysely": "^0.28.8",
         "kysely-ctl": "^0.19.0",
+        "lexical": "^0.39.0",
         "libphonenumber-js": "^1.12.15",
         "mailgun.js": "^12.0.3",
         "mantine-datatable": "^8.2.0",
