--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,5 @@
 sonar.projectKey=managementApp
+sonar.sources=.
+sonar.exclusions=**/node_modules/**,**/.next/**,**/coverage/**,**/.git/**,**/dist/**,**/build/**,**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
+sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
