--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=managementApp
-sonar.sources=.
-sonar.exclusions=**/node_modules/**,**/.next/**,**/coverage/**,**/.git/**,**/dist/**,**/build/**,**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
-sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
+sonar.sources=src
+sonar.tests=tests
+sonar.exclusions=**/node_modules/**,**/.next/**,**/coverage/**,**/.git/**,**/dist/**,**/build/**,**/*.min.js,**/*.min.css,**/styled-system/**,**/playwright-report/**,**/.playwright/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.cpd.exclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
