--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
         "vitest-monocart-coverage": "^4.0.1"
     },
     "overrides": {
-        "@types/react": "19.2.10"
+        "@types/react": "19.2.10",
+        "fast-xml-parser": "5.3.4"
     }
 }
