--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
         "update-all-packages": "npx npm-check-updates -u"
     },
     "dependencies": {
-        "@aws-sdk/client-codebuild": "^3.980.0",
-        "@aws-sdk/client-ecr": "^3.980.0",
+        "@aws-sdk/client-codebuild": "^3.981.0",
+        "@aws-sdk/client-ecr": "^3.981.0",
         "@aws-sdk/client-s3": "^3.980.0",
-        "@aws-sdk/client-secrets-manager": "^3.980.0",
-        "@aws-sdk/client-sts": "^3.980.0",
+        "@aws-sdk/client-secrets-manager": "^3.981.0",
+        "@aws-sdk/client-sts": "^3.981.0",
         "@aws-sdk/credential-provider-ini": "^3.972.3",
         "@aws-sdk/lib-storage": "^3.980.0",
-        "@aws-sdk/s3-presigned-post": "^3.980.0",
-        "@aws-sdk/s3-request-presigner": "^3.980.0",
+        "@aws-sdk/s3-presigned-post": "^3.981.0",
+        "@aws-sdk/s3-request-presigner": "^3.981.0",
         "@casl/ability": "^6.8.0",
         "@clerk/nextjs": "^6.37.0",
         "@faker-js/faker": "^10.2.0",
@@ -132,7 +132,6 @@
         "vitest-monocart-coverage": "^4.0.1"
     },
     "overrides": {
-        "@types/react": "19.2.10",
-        "fast-xml-parser": "5.3.4"
+        "@types/react": "19.2.10"
     }
 }
