--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,7 +104,7 @@ services:
         ports:
             - 4000:4000
         healthcheck:
-            test: ['CMD-SHELL', 'curl -s http://localhost:4000/']
+            test: ['CMD-SHELL', 'curl -sf http://localhost:4000/icon.png']
             interval: 30s
             retries: 5
             start_period: 45s
