--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
         "mantine-datatable": "^8.3.13",
         "mantine-form-zod-resolver": "^1.3.0",
         "next": "16.1.6",
-        "next-swagger-doc": "^0.4",
+        "next-swagger-doc": "^0.4.1",
         "papaparse": "^5.5.3",
         "pg": "^8.17.2",
         "qrcode.react": "^4.2.0",
@@ -87,6 +87,7 @@
         "remeda": "^2.33.4",
         "server-only": "^0.0.1",
         "si-encryption": "github:safeinsights/encryption#0dc20c2949199185182c16569313660657dcb636",
+        "swagger-jsdoc": "^6.2.8",
         "uuid": "^13.0.0",
         "validator": "^13.15.26",
         "zod": "^4.3.6",
@@ -116,12 +117,12 @@
         "globals": "^17.2.0",
         "happy-dom": "*",
         "husky": "^9.1.7",
-        "kysely-codegen": "^0.19.0",
+        "kysely-codegen": "^0.20.0",
         "lint-staged": "^16.2.7",
         "minimist": "^1.2.8",
         "monocart-reporter": "^2.9.23",
         "next-router-mock": "^1.0.5",
-        "npm-run-all": "*",
+        "npm-run-all": "^4.1.5",
         "pg-transactional-tests": "^1.2.0",
         "prettier": "*",
         "prompts": "^2.4.2",
