replace npm-run-all with concurrently

--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
         "lint": "eslint . && prettier --check --log-level warn .",
         "validate-actions": "tsx tests/validate-actions.ts",
         "lint:fix": "eslint --fix . && prettier --write --log-level warn .",
-        "pre:push": "run-p lint:fix typecheck validate-actions",
+        "pre:push": "concurrently --kill-others-on-fail 'npm:lint:fix' 'npm:typecheck' 'npm:validate-actions'",
         "typecheck": "tsc --noEmit --skipLibCheck",
         "update-db-types": "kysely-codegen --camel-case --out-file src/database/types.ts",
-        "checks": "run-p -c typecheck lint validate-actions",
+        "checks": "concurrently 'npm:typecheck' 'npm:lint' 'npm:validate-actions'",
         "test:e2e": "playwright test",
         "test:e2e:debug": "playwright test --ui --headed --debug",
         "test:unit": "vitest",
-        "test": "run-p -c test:*",
+        "test": "concurrently 'npm:test:*'",
         "test:coverage": "tsx tests/merged-coverage.ts",
         "pre:commit": "npx lint-staged",
         "update-all-packages": "npx npm-check-updates -u"
@@ -122,7 +122,7 @@
         "minimist": "^1.2.8",
         "monocart-reporter": "^2.9.23",
         "next-router-mock": "^1.0.5",
-        "npm-run-all": "^4.1.5",
+        "concurrently": "^9.1.2",
         "pg-transactional-tests": "^1.2.0",
         "prettier": "*",
         "prompts": "^2.4.2",
