--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -80,8 +80,8 @@ jobs:
             CLERK_REVIEWER_PASSWORD: ${{ secrets.CLERK_REVIEWER_PASSWORD }}
             CLERK_ADMIN_EMAIL: ${{ secrets.CLERK_ADMIN_EMAIL }}
             CLERK_ADMIN_PASSWORD: ${{ secrets.CLERK_ADMIN_PASSWORD }}
-            S3_ENDPOINT: 'http://localhost:8333'
-            S3_BROWSER_ENDPOINT: 'http://localhost:8333'
+            S3_ENDPOINT: 'http://127.0.0.1:8333'
+            S3_BROWSER_ENDPOINT: 'http://127.0.0.1:8333'
             AWS_ACCESS_KEY_ID: 'si-local-s3'
             AWS_SECRET_ACCESS_KEY: 'si-local-s3'
             BUCKET_NAME: 'mgmt-app-local'
@@ -128,19 +128,33 @@ jobs:
                     chmod +x weed
                     rm linux_amd64.tar.gz
                   fi
+                  echo "SeaweedFS version: $(./weed version 2>&1 || true)"
+                  mkdir -p /tmp/seaweed-data
                   AWS_ACCESS_KEY_ID=si-local-s3 AWS_SECRET_ACCESS_KEY=si-local-s3 \
                     ./weed server -s3 -dir=/tmp/seaweed-data >/tmp/seaweed.log 2>&1 &
-                  for i in $(seq 1 30); do
-                    status=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8333/ 2>/dev/null || true)
+                  WEED_PID=$!
+                  sleep 2
+                  for i in $(seq 1 60); do
+                    if ! kill -0 $WEED_PID 2>/dev/null; then
+                      echo "SeaweedFS process died!"
+                      exit 1
+                    fi
+                    status=$(curl -s -o /dev/null -w "%{http_code}" http://127.0.0.1:8333/ 2>/dev/null || true)
                     if [[ "$status" == "200" || "$status" == "403" ]]; then
                       echo "SeaweedFS S3 is ready (HTTP $status)"
                       break
                     fi
-                    echo "Waiting... ($i/30, status=$status)"
+                    if (( i % 10 == 0 )); then
+                      echo "Still waiting... ($i/60, status=$status)"
+                    fi
                     sleep 1
                   done
+                  if [[ "$status" != "200" && "$status" != "403" ]]; then
+                    echo "SeaweedFS failed to start within 60s."
+                    exit 1
+                  fi
             - name: Create S3 bucket
-              run: aws --endpoint-url http://localhost:8333 s3 mb s3://mgmt-app-local
+              run: aws --endpoint-url http://127.0.0.1:8333 s3 mb s3://mgmt-app-local
             - name: npm install
               run: npm ci
             - name: provision db
@@ -170,6 +184,9 @@ jobs:
             - name: Display server log
               run: if [ -f server_output.log ]; then cat server_output.log; fi
               if: always()
+            - name: Display SeaweedFS log
+              run: if [ -f /tmp/seaweed.log ]; then cat /tmp/seaweed.log; fi
+              if: failure()
             - name: Delete any test users created
               run: npx tsx ./bin/delete-clerk-test-users.ts
               if: always()
