--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -128,29 +128,25 @@ jobs:
                     chmod +x weed
                     rm linux_amd64.tar.gz
                   fi
-                  echo "SeaweedFS version: $(./weed version 2>&1 || true)"
+                  echo "SeaweedFS $(./weed version 2>&1 || true)"
                   mkdir -p /tmp/seaweed-data
                   AWS_ACCESS_KEY_ID=si-local-s3 AWS_SECRET_ACCESS_KEY=si-local-s3 \
                     ./weed server -s3 -dir=/tmp/seaweed-data >/tmp/seaweed.log 2>&1 &
                   WEED_PID=$!
-                  sleep 2
-                  for i in $(seq 1 60); do
+                  for i in $(seq 1 30); do
                     if ! kill -0 $WEED_PID 2>/dev/null; then
                       echo "SeaweedFS process died!"
                       exit 1
                     fi
                     status=$(curl -s -o /dev/null -w "%{http_code}" http://127.0.0.1:8333/ 2>/dev/null || true)
                     if [[ "$status" == "200" || "$status" == "403" ]]; then
-                      echo "SeaweedFS S3 is ready (HTTP $status)"
+                      echo "SeaweedFS S3 is ready (HTTP $status after ${i}s)"
                       break
-                    fi
-                    if (( i % 10 == 0 )); then
-                      echo "Still waiting... ($i/60, status=$status)"
                     fi
                     sleep 1
                   done
                   if [[ "$status" != "200" && "$status" != "403" ]]; then
-                    echo "SeaweedFS failed to start within 60s."
+                    echo "SeaweedFS failed to start within 30s."
                     exit 1
                   fi
             - name: Create S3 bucket
