--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -100,6 +100,7 @@ jobs:
                   key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
                   path: |
                       ~/.npm
+                      ~/.cache
                       ${{ github.workspace }}/.next/cache
                       # Generate a new cache whenever packages or source files change.
                   restore-keys: |
