--- a/.env.sample
+++ b/.env.sample
@@ -15,8 +15,8 @@ MAILGUN_API_KEY=YOUR_KEY
 DOMAIN_NAME=localhost:4000
 
 # only needed if running locally
-S3_ENDPOINT=http://localhost:8333
-S3_BROWSER_ENDPOINT=http://localhost:8333
+S3_ENDPOINT=http://127.0.0.1:8333
+S3_BROWSER_ENDPOINT=http://127.0.0.1:8333
 BUCKET_NAME=mgmt-app-local
 AWS_ACCESS_KEY_ID=si-local-s3
 AWS_SECRET_ACCESS_KEY=si-local-s3
