--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -110,6 +110,8 @@ jobs:
                   docker run -d \
                     --name seaweedfs \
                     -p 8333:8333 \
+                    -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
+                    -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
                     chrislusf/seaweedfs:latest \
                     server -s3 -dir=/data
 
