Refactor encrypted file viewing into reusable EncryptedFilesPanel component
Extract security scan panel into a generic EncryptedFilesPanel with
useEncryptedFilesPanel hook, add file content parsing helpers, and
include a debug script for uploading scan logs.

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ tests/coverage/
 playwright-report/
 src/styles/generated
 ./tests/fixtures/temp/large-file
-
+monocart-report/
 # auto-created and updated by nextjs
 next-env.d.ts
 # clerk configuration (can include secrets)
